W-Shicaコードの移行

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
     ],
     "baseUrl": "src",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"],
+      "@features/*": ["features/*"],
     }
   },
   "include": [
